samples/_failures_safe/1761536425_0c2a6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b16c3b28.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_b16c3b28.c:164:9: error: expected declaration or statement at end of input
  164 |         case TOKEN_IDENTIFIER:
      |         ^~~~
./samples/SAFE/__tmp_b16c3b28.c:164:9: error: expected declaration or statement at end of input
